[project]
name = "media-analyzer"
version = "0.1.0"
description = "Cross-platform media file analyzer with raw byte parsing"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[project.scripts]
media-analyzer = "media_analyzer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_analyzer"]
